Revision history for Perl extension Coro.

TODO: should explore PerlIO::via::CoroCede and PerlIO::via::CoroAIO.
TODO: maybe implement a default message channel, very much like Erlang's
      actor model (which is cool in a lot of important aspects (failures!),
      but very lacking in others (higher level ipc)).

4.7  Sun May 11 00:32:19 CEST 2008
	- completely reworked the Coro manpage.
      	- added Coro::AnyEvent, generic event loop integration.
	- implement cancel, ready and kill commands in Coro::Debug.
        - document find_coro in Coro::Debug.
        - incompatible change: rename has_stack to has_cctx.
        - Coro::AIO and Coro::BDB no longer force event model detection,
          use AnyEvent::AIO and AnyEvent::BDB.

4.6  Sat Apr 26 10:05:14 CEST 2008
	- INCOMPATIBLE CHANGE: sub/code attributes are no longer supported
          by the Coro module. It was a mistake to have it in the first place.
        - (experimental) support for activestate perl 5.10 (method "w").
        - (experimental) support for strawberry perl (method "a").
        - coro_sigelem_set did not return a value although it had to,
          actual impact unknown.

4.51 Mon Apr 14 13:28:27 CEST 2008
	- make it compile again on 5.8.

4.50 Thu Apr 10 09:43:17 CEST 2008
	- I did it twice! (see 4.49).

4.49 Sun Apr  6 21:23:31 CEST 2008
	- grr, instead of compiling the recent changes on 5.10 only they
          were compiled on 5.8 only.

4.48 Sun Apr  6 20:36:46 CEST 2008
	- allow coroutine switches during eval's under 5.10.x, as it seems
          the parser is a per-interpreter option now, so this is safe
          (this might fix the odd crashing bug).
        - drop support for 5.9.x versions: they are dead, jim.

4.47 Sun Apr  6 00:37:52 CEST 2008
	- force cctx allocation on API calls: we know we need to force one
          and gcc actually manages to confuse our heuristic nowadays,
          leading to crashes and worse.
        - document force_cctx.
