@@ -36,7 +36,9 @@ compatible to perls builtin select, though.
 This is necessary because LWP might (and does) try to resolve hostnames
 this way.
 
-Impact: likely little, the two functions should be pretty equivalent.
+Impact: some code might not expect coroutine semantics, for example, when
+you fork you might prefer the blocking variant because other coroutines
+shouldn't actually run.
 
 =item It replaces the base class of Net::HTTP, Net::FTP, Net::NNTP.
 
@@ -64,16 +66,16 @@ package Coro::LWP;
 
 use strict;
 
-use Coro::Select;
-use Coro::Util;
-use Coro::Socket;
+use Coro::Select ();
+use Coro::Util ();
+use Coro::Socket ();
 
-use Socket;
-use IO::Socket::INET;
+use Socket ();
+use IO::Socket::INET ();
 
-use Net::HTTP;
-use Net::FTP;
-use Net::NNTP;
+use Net::HTTP ();
+use Net::FTP ();
+use Net::NNTP ();
 
 our $VERSION = 4.6;
 
